--- a/index_ita.html
+++ b/index_ita.html
@@ -242,7 +242,7 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">Marzo 2017 - Presente (Più di 3 Anni)</p>
+                            <p class="timeline__timeframe">Marzo 2017 - Marzo 2020 (3 Anni)</p>
                             <h3>Hitech srl</h3>
                             <h5>Business Developer & Web Marketing Manager</h5>
                         </div>
