--- a/index_ita.html
+++ b/index_ita.html
@@ -172,12 +172,12 @@
             <div class="col-six tab-full left">
                 <h3>Salve!</h3>
 
-                <p>Mi chiamo Davide, sono un Business Developer & Web Marketing Specialist.
+                <p>Mi chiamo Davide, sono un Business Developer & Web Marketing Specialist.<br>
                 Aumentare le vendite è il mio obiettivo primario.<br><br>
 
-                Ho deciso di intraprendere questa carriera poiché credo si coniughi al meglio con le mie caratteristiche; infatti ritengo che il web sia il miglior strumento per entrare in contatto con i clienti, perciò ritengo che il Marketing Digitale sia il mezzo ideale per aumentare il fatturato.<br><br>
+                Ho deciso di intraprendere questa carriera poiché credo si coniughi al meglio con le mie caratteristiche; ritengo che il web sia il miglior strumento per entrare in contatto con i clienti, per questo mi sono specializzato nel Marketing Digitale che ritengo sia il mezzo ideale per aumentare il fatturato.<br><br>
 
-                Pongo alla base del mio lavoro quotidiano la comunicazione con i clienti e la collaborazione con il mio team, tutto ciò mi permette di ampliare e approfondire costantemente le mie conoscenze, che però cerco di migliore e mantenere aggiornate anche attraverso un continuo impegno nello studio e nell'aggiornamento.<br><br>
+                Pongo alla base del mio lavoro quotidiano la comunicazione con i clienti e la collaborazione con il mio team, tutto ciò mi permette di ampliare e approfondire costantemente le mie conoscenze, che però cerco di migliore e mantenere aggiornate anche attraverso un continuo impegno nello studio, non solo teorico.<br><br>
 
                 Amo sperimentare le novità e essere innovativo.
                 </p>
