--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">March 2017 - Present (More than 3 years)</p>
+                            <p class="timeline__timeframe">March 2017 - March 2020 (3 years)</p>
                             <h3>Hitech srl</h3>
                             <h5>Business Developer & Web Marketing Manager</h5>
                         </div>
