--- a/index_ita.html
+++ b/index_ita.html
@@ -251,7 +251,7 @@
                                 ▪ Vendita di soluzioni hardware e software con approccio consulenziale (offerte, schede prezzi ecc ...);<br>
                                 ▪ Follow up dei clienti/prospect per il raggiungimento degli obiettivi commerciali;<br>
                                 ▪ Massimizzazione del ROI, attraverso analisi di mercato KPI e analisi SWOT;<br>
-                                ▪ Sviluppare piani di marketing strategico e gestione del Budget dedicato;<br>
+                                ▪ Sviluppo piani di marketing strategico e gestione del Budget dedicato;<br>
                                 ▪ Identificazione di nuovi trend e opportunità di sviluppo del business;<br>
                                 ▪ Analisi SEO sito Web (Search Engine Optimization);<br>
                                 • Costruzione di relazioni di lungo termine con i clienti;<br>
@@ -270,9 +270,9 @@
                             <p>Attività di gestione del portafoglio clienti (400 clienti Pubblica Amministrazione) e ricerca di nuovi clienti per sviluppo commerciale.<br><br>
 
                                 ATTIVITÀ:<br>
-                                ▪ Realizzazione offerte commerciali e interfacciamento con commerciale PosteItaliane;<br>
+                                ▪ Realizzazione offerte commerciali e interfacciamento con commerciali PosteItaliane;<br>
                                 ▪ Primo riferimento del cliente pre e post vendita;<br>
-                                ▪ Costruire relazioni di lungo termine con i clienti esistenti;<br>
+                                ▪ Costruzione relazioni di lungo termine con i clienti esistenti;<br>
                                 ▪ Comunicazione ai clienti per il lancio novità o promozioni;<br>
                                 ▪ Gestione del tema tecnico e commerciale per gestire le esigenze dei clienti;<br>
                                 ▪ Cross Selling.</p>
@@ -294,14 +294,14 @@
                         <div class="timeline__desc">    
                             <p>ATTIVITÀ:<br>
                                 ▪ Progettazione, organizzazione ed esecuzione di attività di marketing;<br>
-                                ▪ Monitorare i costi e il budget di marketing;<br>
+                                ▪ Monitoraggio dei costi e del budget dedicato al marketing;<br>
                                 ▪ Attività di ampliamento portafoglio prospect;<br>
                                 ▪ Restyling sito web<br>
                                 ▪ Analisi delle prestazioni delle attività di marketing (Google Adwords e Google Analytics);<br>
-                                ▪ Analizza e monitora il livello dei prezzi di mercato e della concorrenza al fine di gestire adeguatamente la leva dei prezzi;<br>
-                                ▪ Gestione e realizzazioni campagne Direct Email Marketing;<br>
+                                ▪ Analisi e monitoraggio della concorrenza al fine di gestire adeguatamente la leva dei prezzi;<br>
+                                ▪ Gestione e realizzazione campagne Direct Email Marketing;<br>
                                 ▪ Gestione CMS e CRS;<br>
-                                ▪ Elaborare il piano di marketing e la strategia di segmentazione, targeting e posizionamento del prodotto;<br>
+                                ▪ Elaborazione piani di marketing e strategia di segmentazione, targeting e posizionamento del prodotto;<br>
                                 ▪ Progettazione e produzione di materiale aziendale (case history, presentazioni per i clienti, ecc.).</p>
                         </div>
                     </div> <!-- end timeline__block -->
