--- a/index_ita.html
+++ b/index_ita.html
@@ -242,7 +242,27 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">Marzo 2017 - Marzo 2020 (3 Anni)</p>
+                            <p class="timeline__timeframe">Ottobre 2020 - Attuale</p>
+                            <h3>Amicar</h3>
+                            <h5>Consulente Vendita Automotive</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>ATTIVITÀ:<br>
+                                ▪ Seguire il cliente nell’esperienza di acquisto garantendo massima professionalità e cura per i dettagli;<br>
+                                ▪ Garantire il raggiungimento degli obiettivi commerciali assegnati sulle vetture nuovo;<br>
+                                ▪ Applicare le strategie aziendali e gli obiettivi individuali assegnati;<br>
+                                ▪ Condividere i risultati e l’andamento del lavoro con il supervisore;<br>
+                                ▪ Gestione pratiche di finanziamento, leasing, noleggio lungo termine;<br>
+                                ▪ Fidelizzare la clientela assicurando una piena Customer Esperience;<br>
+                                ▪ Raggiungere i KPI’s di performance indicati da casa madre;<br>
+                                ▪ Gestione criticità.</p>
+                        </div>
+                    </div> <!-- end timeline__block -->
+
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">Marzo 2017 - Marzo 2020 (3 Anni e 10 mesi)</p>
                             <h3>Hitech srl</h3>
                             <h5>Business Developer & Web Marketing Manager</h5>
                         </div>
@@ -254,28 +274,8 @@
                                 ▪ Sviluppo piani di marketing strategico e gestione del Budget dedicato;<br>
                                 ▪ Identificazione di nuovi trend e opportunità di sviluppo del business;<br>
                                 ▪ Analisi SEO sito Web (Search Engine Optimization);<br>
-                                • Costruzione di relazioni di lungo termine con i clienti;<br>
-                                • Responsabile del team per la realizzazione di nuovi progetti.</p>
-                        </div>
-                    </div> <!-- end timeline__block -->
-
-                    <div class="timeline__block">
-                        <div class="timeline__bullet"></div>
-                        <div class="timeline__header">
-                            <p class="timeline__timeframe">Dicembre 2018 - Febbraio 2020 (1 Anno e 3 Mesi)</p>
-                            <h3>OneNet srl</h3>
-                            <h5>Business Developer & Inside Sales</h5>
-                        </div>
-                        <div class="timeline__desc">
-                            <p>Attività di gestione del portafoglio clienti (400 clienti Pubblica Amministrazione) e ricerca di nuovi clienti per sviluppo commerciale.<br><br>
-
-                                ATTIVITÀ:<br>
-                                ▪ Realizzazione offerte commerciali e interfacciamento con commerciali PosteItaliane;<br>
-                                ▪ Primo riferimento del cliente pre e post vendita;<br>
-                                ▪ Costruzione relazioni di lungo termine con i clienti esistenti;<br>
-                                ▪ Comunicazione ai clienti per il lancio novità o promozioni;<br>
-                                ▪ Gestione del tema tecnico e commerciale per gestire le esigenze dei clienti;<br>
-                                ▪ Cross Selling.</p>
+                                ▪ Costruzione di relazioni di lungo termine con i clienti;<br>
+                                ▪ Responsabile del team per la realizzazione di nuovi progetti.</p>
                         </div>
                     </div> <!-- end timeline__block -->
                 </div> <!-- end timeline -->
@@ -287,22 +287,20 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">Giugno 2016 - Marzo 2017 (10 Mesi)</p>
-                            <h3>Hitech srl</h3>
-                            <h5>Assistente Brand Manager</h5>
+                            <p class="timeline__timeframe">Dicembre 2018 - Febbraio 2020 (1 Anno e 3 Mesi)</p>
+                            <h3>OneNet srl</h3>
+                            <h5>Business Developer & Inside Sales</h5>
                         </div>
                         <div class="timeline__desc">    
-                            <p>ATTIVITÀ:<br>
-                                ▪ Progettazione, organizzazione ed esecuzione di attività di marketing;<br>
-                                ▪ Monitoraggio dei costi e del budget dedicato al marketing;<br>
-                                ▪ Attività di ampliamento portafoglio prospect;<br>
-                                ▪ Restyling sito web<br>
-                                ▪ Analisi delle prestazioni delle attività di marketing (Google Adwords e Google Analytics);<br>
-                                ▪ Analisi e monitoraggio della concorrenza al fine di gestire adeguatamente la leva dei prezzi;<br>
-                                ▪ Gestione e realizzazione campagne Direct Email Marketing;<br>
-                                ▪ Gestione CMS e CRS;<br>
-                                ▪ Elaborazione piani di marketing e strategia di segmentazione, targeting e posizionamento del prodotto;<br>
-                                ▪ Progettazione e produzione di materiale aziendale (case history, presentazioni per i clienti, ecc.).</p>
+                            <p>Attività di gestione del portafoglio clienti (400 clienti Pubblica Amministrazione) e ricerca di nuovi clienti per sviluppo commerciale.<br><br>
+
+                                ATTIVITÀ:<br>
+                                ▪ Realizzazione offerte commerciali e interfacciamento con commerciali PosteItaliane;<br>
+                                ▪ Primo riferimento del cliente pre e post vendita;<br>
+                                ▪ Costruzione relazioni di lungo termine con i clienti esistenti;<br>
+                                ▪ Comunicazione ai clienti per il lancio novità o promozioni;<br>
+                                ▪ Gestione del tema tecnico e commerciale per gestire le esigenze dei clienti;<br>
+                                ▪ Cross Selling.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
