aggiunto amicar in ING

--- a/index.html
+++ b/index.html
@@ -244,7 +244,26 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">March 2017 - March 2020 (3 years)</p>
+                            <p class="timeline__timeframe">October 2020 - Now</p>
+                            <h3>Amicar srl</h3>
+                            <h5>Business Consultant Automotive</h5>
+                        </div>
+                        <div class="timeline__desc">
+                            <p>ACTIVITIES:<br>
+                                ▪ Communicating with customers via email, telephone, and in person;<br>
+                                ▪ Suggesting suitable vehicles based on customer needs;<br>
+                                ▪ Negotiating the final price for the sale;<br>
+                                ▪ Guarantee the achievement of the commercial objectives assigned;<br>
+                                ▪ IdentManagement of financing, leasing, long-term rental practices;<br>
+                                ▪ Build customer loyalty by ensuring a full Customer Experience;<br>
+                                ▪ Achieve the performance KPIs indicated by the parent company.</p>
+                        </div>
+                    </div> <!-- end timeline__block -->
+
+                    <div class="timeline__block">
+                        <div class="timeline__bullet"></div>
+                        <div class="timeline__header">
+                            <p class="timeline__timeframe">March 2017 - March 2020 (3 years and 10 months)</p>
                             <h3>Hitech srl</h3>
                             <h5>Business Developer & Web Marketing Manager</h5>
                         </div>
@@ -256,26 +275,8 @@
                                 ▪ Developing strategic marketing plans and advertising budget management;<br>
                                 ▪ Identification of new trends and business development opportunities;<br>
                                 ▪ Website SEO analysis (search engine optimization);<br>
-                                • Building long term relationships with customers;<br>
-                                • Team managing for the realization of new projects.</p>
-                        </div>
-                    </div> <!-- end timeline__block -->
-
-                    <div class="timeline__block">
-                        <div class="timeline__bullet"></div>
-                        <div class="timeline__header">
-                            <p class="timeline__timeframe">December 2018 - February 2020 (1 year and 3 months)</p>
-                            <h3>OneNet srl</h3>
-                            <h5>Business Developer & Inside Sales</h5>
-                        </div>
-                        <div class="timeline__desc">
-                            <p>ACTIVITIES:<br>
-                                ▪ Realization of commercial offers and interfacing with PosteItaliane commercial;<br>
-                                ▪ First customer reference before and after sale;<br>
-                                ▪ Building long-term relationships with existing customers;<br>
-                                ▪ Communication with the customers for the launching of news promotions;<br>
-                                ▪ Management of the technical and commercial theme to manage customer needs;<br>
-                                ▪ Cross Selling.</p>
+                                ▪ Building long term relationships with customers;<br>
+                                ▪ Team managing for the realization of new projects.</p>
                         </div>
                     </div> <!-- end timeline__block -->
                 </div> <!-- end timeline -->
@@ -287,21 +288,18 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">June 2016 - 
-                                March 2017 (10 months)</p>
-                            <h3>Hitech srl</h3>
-                            <h5>Assistant Brand Manager</h5>
+                            <p class="timeline__timeframe">December 2018 - February 2020 (1 year and 3 months)</p>
+                            <h3>OneNet srl</h3>
+                            <h5>Business Developer & Inside Sales</h5>
                         </div>
                         <div class="timeline__desc">    
                             <p>ACTIVITIES:<br>
-                                ▪ Planning, organization and execution of marketing activities;<br>
-                                ▪ Monitoring costs and marketing budgets;<br>
-                                ▪ Website restyling and SEO analysis;<br>
-                                ▪ Analysis of the performance of marketing activities (Google Adwords and Google Analytics);<br>
-                                ▪ Management and implementation of Direct Email Marketing campaigns;<br>
-                                ▪ CMS and CRS management;<br>
-                                ▪ Developing the marketing plan and the segmentation, targeting and product positioning strategy;<br>
-                                ▪ Design and production of company material (case history, presentations for customers, etc.).</p>
+                                ▪ Realization of commercial offers and interfacing with PosteItaliane commercial;<br>
+                                ▪ First customer reference before and after sale;<br>
+                                ▪ Building long-term relationships with existing customers;<br>
+                                ▪ Communication with the customers for the launching of news promotions;<br>
+                                ▪ Management of the technical and commercial theme to manage customer needs;<br>
+                                ▪ Cross Selling.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
