--- a/index_ita.html
+++ b/index_ita.html
@@ -243,7 +243,7 @@
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
                             <p class="timeline__timeframe">Ottobre 2020 - Attuale</p>
-                            <h3>Amicar</h3>
+                            <h3>Amicar srl</h3>
                             <h5>Consulente Vendita Automotive</h5>
                         </div>
                         <div class="timeline__desc">
