--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
                                 ▪ Negotiating the final price for the sale;<br>
                                 ▪ Guarantee the achievement of the commercial objectives assigned;<br>
                                 ▪ IdentManagement of financing, leasing, long-term rental practices;<br>
-                                ▪ Build customer loyalty by ensuring a full Customer Experience;<br>
-                                ▪ Achieve the performance KPIs indicated by the parent company.</p>
+                                ▪ Build customer loyalty by ensuring a full Customer Experience.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
