--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                                 ▪ Suggesting suitable vehicles based on customer needs;<br>
                                 ▪ Negotiating the final price for the sale;<br>
                                 ▪ Guarantee the achievement of the commercial objectives assigned;<br>
-                                ▪ IdentManagement of financing, leasing, long-term rental practices;<br>
+                                ▪ Management of financing, leasing, long-term rental practices;<br>
                                 ▪ Build customer loyalty by ensuring a full Customer Experience.</p>
                         </div>
                     </div> <!-- end timeline__block -->
