--- a/index_ita.html
+++ b/index_ita.html
@@ -261,7 +261,7 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">Marzo 2017 - Marzo 2020 (3 Anni e 10 mesi)</p>
+                            <p class="timeline__timeframe">Giugno 2016 - Marzo 2020 (3 Anni e 9 mesi)</p>
                             <h3>Hitech srl</h3>
                             <h5>Business Developer & Web Marketing Manager</h5>
                         </div>
@@ -377,7 +377,7 @@
                     <div class="timeline__block">
                         <div class="timeline__bullet"></div>
                         <div class="timeline__header">
-                            <p class="timeline__timeframe">September 2011 - March 2014</p>
+                            <p class="timeline__timeframe">Settembre 2011 - Marzo 2014</p>
                             <h3>Laurea triennale in Marketing e comunicazione d'azienda</h3>
                             <h5>Uniba - Economia, Management e Diritto d'impresa</h5>
                         </div>
